# VoiceRecorder

./: .gitignore  LICENSE  README.md  VoiceRecorder.pyw  pyproject.toml  requirements.txt  setup.py  setup_build.py  voicerecorder.desktop  voicerecorder.qrc
.github/workflows/: build-rpm.yml
rpm/: voicerecorder.spec
src/voicerecorder/: __main__.py  audiorecorder.py  constants.py  main.py  mainwindow.py  mainwindow_ui.py  settings.py  utils.py  voicerecorder_rc.py
ui/: mainwindow.ui
voicerecorder/: __init__.py  __main__.py  audioformat.py  audiolevel.py  audiorecorder.py  helperutils.py  main.py  mainwindow.py  mainwindow.qrc  mainwindow.ui  mainwindow_rc.py  mainwindow_ui.py  recordsmanager.py  recordsmodel.py  settings.py  statusinfo.py  types.py  utils.py
